# watch-and-commit

./: Cargo.toml  README.md  config.json
.context/: 0ad10dc6-11a6-11f1-94ef-6253001f2345.json  34f15984-e68c-11f0-bc5b-e675c80743e7.json  352b6ffa-11b3-11f1-9b22-6253001f2345.json  3fd520de-11b0-11f1-b38a-6253001f2345.json  5ea54030-11af-11f1-aca1-6253001f2345.json  899a610a-e4d0-11f0-a884-e675c80743e7.json  ca0b780c-1c3c-11f1-bdfb-5e8357a821c0.json  e39cecd2-11b1-11f1-8feb-6253001f2345.json
.dump/: 7a61ae09-3b21-11f1-88bc-42010aa60fd6.json  b42b5271-3b22-11f1-9937-42010aa60fd6.json
src/: debouncer.rs  event_handler.rs  main.rs
